--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -1,7 +1,7 @@
 {% extends "network/layout.html" %}
 {% load static %}
 
-{% block script %}<script src="{% static 'network/allPosts.js' %}"></script>{% endblock %}
+{% block script %}<script src="{% static 'network/helper.js' %}"></script>{% endblock %}
 
 {% block body %}
     <div class="container-fluid">
@@ -37,7 +37,6 @@
                     
                 </div>
                 {% endfor %}
-            </div>
         </div>
     </div>
 {% endblock %}
