Added profile page from post click

--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -19,7 +19,7 @@
             </div>
         {% endif %}
     
-        <div class="card" id="posts">           
+        <div id="posts">           
         </div>
     </div>
 {% endblock %}
