added relavent posts to All posts, following and profile pages

--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -1,8 +1,6 @@
 {% extends "network/layout.html" %}
 {% load static %}
 
-{% block script %}<script src="{% static 'network/helper.js' %}"></script>{% endblock %}
-
 {% block body %}
     <div class="container-fluid">
         <h2>All Posts</h2>
@@ -19,7 +17,7 @@
             </div>
         {% endif %}
     
-        <div id="posts">           
+        <div id="posts" data-type="all">           
         </div>
     </div>
 {% endblock %}
