--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -8,7 +8,7 @@
             <h5 class="card-title">{{ username }}
                 {% if user.is_authenticated and user.id != profile_id %}
                 {% if not following %}
-                    <button type="button" id="follow" class="btn btn-success">Follow</button>
+                    <button type="button" id="follow" class="btn btn-success" data-user="{{ profile_id }}">Follow</button>
                 {% else %}
                     <button type="button" id="unfollow" class="btn btn-danger">Unfollow</button>
                 {% endif %}
