edit post implementation

--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -17,7 +17,7 @@
             </div>
         {% endif %}
     
-        <div id="posts" data-type="all">           
+        <div id="posts" data-type="all" data-csrftoken="{{csrf_token }}">           
         </div>
     </div>
 {% endblock %}
