--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -1,6 +1,6 @@
 {% extends "network/layout.html" %}
 {% load static %}
-
+{% block script %}<script src="{% static 'network/showPosts.js' %}" type="module"></script>{% endblock %}
 {% block body %}
     <div class="container-fluid">
         <h2>All Posts</h2>
