--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -1,7 +1,10 @@
 {% extends 'network/layout.html' %}
 {% load static %}
 
-{% block script %}<script src="{% static 'network/followProfile.js' %}" type="module"></script>{% endblock %}
+{% block script %}
+    <script src="{% static 'network/followProfile.js' %}" type="module"></script>
+    <script src="{% static 'network/showPosts.js' %}" type="module"></script>
+{% endblock %}
 
 {% block body %}
     
