--- a/network/templates/network/following.html
+++ b/network/templates/network/following.html
@@ -7,7 +7,7 @@
 <div class="container-fluid">
     <h2>Following</h2>
 
-    <div id="posts" data-type="following">          
+    <div id="posts" data-type="following" data-csrftoken="{{ csrf_token }}">          
     </div>
 </div>
 {% endblock %}
