--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="container-fluid"></div>
-        <div id="posts" data-type="user-{{ profile_id }}">           
+        <div id="posts" data-type="user-{{ profile_id }}" data-csrftoken="{{ csrf_token }}">           
         </div>
     </div>
 {% endblock %}
