--- a/network/static/network/styles.css
+++ b/network/static/network/styles.css
@@ -1,6 +1,24 @@
+.bi {
+    color: red;
+}
+
+.bi:hover {
+    cursor: pointer;
+}
+
+.edit {
+    float: right;
+    font-size: 14px;
+    color: blue;
+}
+
+.edit:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
 .float-right {
     float: right;
-    font-size: 12px;
+    font-size: 2px;
 }
 
 #follow, #unfollow {
@@ -9,7 +27,7 @@
     padding: 0px 2px;
 }
 
-footer {
+.footer {
     font-size: 10px; 
     text-align: right;
 }
@@ -26,5 +44,5 @@ footer {
 
 small {
     margin: 0px;
-    font-size: 12px;
+    font-size: 16px;
 }
