--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -25,7 +25,7 @@
                   <a class="nav-link" href="{% url 'index' %}">All Posts</a>
                 </li>
                 {% if user.is_authenticated %}
-                    <li class="nav-item">
+                    <li class="nav-item" id="user-nav" data-csrftoken="{{ csrf_token }}">
                         <a class="nav-link" href="{% url 'following' %}">Following</a>
                     </li>
                     <li class="nav-item">
