--- a/network/templates/network/following.html
+++ b/network/templates/network/following.html
@@ -5,7 +5,34 @@
 <div class="container-fluid">
     <h2>Following</h2>
 
-    <div id="posts" data-type="following">          
+    {% for post in posts reversed %}
+    <div class="card">
+        <div class="card-header">
+            <a href="{% url 'profile' post.poster %}">{{  post.poster }}</a>
+        </div>
+        <div class="card-body">
+            <blockquote class="blockquote mb-0">
+
+                <p class="post-text">{{ post.content }}
+                    {% if user.id == post.poster_id %}
+                    <span class="edit">Edit</span>
+                {% endif %}
+                </p>
+
+                {% if user.id in post.likers %}
+                <i class="bi bi-heart-fill h6"></i>
+                {% else %}
+                    <i class="bi bi-heart h6"></i>
+                {% endif %}
+
+                <small> {{ post.likes }}</small><br>
+                <footer class="footer">Posted on:{{ post.timestamp }}
+                    {% if post.last_update %}
+                        - Last updated: {{ post.last_update }}
+                    {% endif %}
+                </footer>
+            </blockquote>                    
+        </div>
     </div>
-</div>
+    {% endfor %}
 {% endblock %}
